# TestFaucet

./: .env.example  Cargo.toml  README.md
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs
contracts/faucet/test_snapshots/test/: test_claim_after_cooldown.1.json  test_double_claim_rejected.1.json  test_double_initialize_rejected.1.json  test_initialize_and_claim.1.json  test_query_functions.1.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: BalanceDisplay.jsx  CampaignCard.css  CampaignCard.jsx  ClaimTokens.jsx  FundModal.css  FundModal.jsx  Navbar.css  Navbar.jsx  ToastContainer.jsx
frontend/src/hooks/: useToast.js  useWallet.js
frontend/src/lib/: contract.js  stellar.js
frontend/src/pages/: CampaignDetailPage.css  CampaignDetailPage.jsx  CreateCampaignPage.css  CreateCampaignPage.jsx  HomePage.css  HomePage.jsx  MyActivityPage.css  MyActivityPage.jsx
frontend/src/styles/: index.css
scripts/: build.sh  deploy.sh
