[package]
name = "soroban-crowdfunding-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.3.0"
soroban-token-sdk = "25.3.0"

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
